@@ -4,6 +4,10 @@
 	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha02: Reef Point Shrine';git push
 	git tag -a 4.9.8-alpha02 -m '';git push --tags
 
+	* S1D: Write all (still unprocessed) arrays to output file
+
+	* S1D: Put output in data mode, enable OpenMP loop
+
 	* S1D: Allocate all variable resources within OpenMP loop
 
 	* S1D: Determine sparse type for unpacking within OpenMP loop
